--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "dependencies": {
-    "react": "^15.0.1",
-    "react-dom": "^15.0.1",
     "axios": "^0.9.1",
-    "es6-promise": "^3.1.2"
+    "es6-promise": "^3.1.2",
+    "moment": "^2.17.1",
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1"
   },
   "devDependencies": {
     "react-addons-test-utils": "^15.0.1",
