--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "@types/node": "^8.0.19",
     "@types/react": "^16.0.0",
     "@types/react-dom": "^15.5.2",
+    "axios": "^0.9.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-scripts-ts": "2.5.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/axios": "^0.9.32"
+  },
   "scripts": {
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
