--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@types/react": "^16.0",
     "@types/react-dom": "^16.0",
     "axios": "^0.17",
+    "preact": "^8.2.6",
+    "preact-compat": "^3.17.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-notifications": "^1.4.3",
