--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-notifications": "^1.4.3",
-    "react-scripts-ts": "2.12.0"
+    "react-scripts-ts": "^2.17.0",
+    "typescript": "^3.5.2"
   },
   "devDependencies": {
     "@types/axios": "^0.14",
