--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
   },
   "devDependencies": {
     "node-sass-chokidar": "^0.0.3",
-    "npm-run-all": "^4.0.2",
-    "webpack-dev-server": "^3.1.11", "//": " To fix vulnerability (to remove later!)"
+    "npm-run-all": "^4.0.2"
   },
   "scripts": {
     "start": "npm-run-all -p watch-css start-ts",
